[gd_scene load_steps=8 format=3 uid="uid://c3ltrerq5fftw"]

[ext_resource type="Script" path="res://Weapons/Rifle/rifle.gd" id="1_h5pw7"]
[ext_resource type="Texture2D" uid="uid://pwp2kkkoy03w" path="res://Characters/Null_C/images/arm.png" id="1_syiff"]
[ext_resource type="Texture2D" uid="uid://b2dpffu0ms5fj" path="res://Weapons/Rifle/Rifle_01.png" id="2_qa0hb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4n2cq"]
size = Vector2(23, 1.5)

[sub_resource type="Animation" id="Animation_jte3w"]
resource_name = "reload"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.0117383, 0.559142, 0.559142, -0.0117383]
}

[sub_resource type="Animation" id="Animation_ces30"]
resource_name = "shoot"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Rifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(58.1369, -11.3184), Vector2(57.1604, -13.33), Vector2(58.1369, -11.3184)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D/Rifle:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/Arm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(20.964, 0.267609), Vector2(20.9875, -1.73224), Vector2(20.964, 0.267609)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Marker2D/Arm:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1.5708, -1.65806, -1.5708]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Marker2D/ShootingPoint:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(118.168, -13.6139), Vector2(118.25, -20.6134), Vector2(118.168, -13.6139)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Marker2D/ShootingPoint:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_43qne"]
_data = {
"reload": SubResource("Animation_jte3w"),
"shoot": SubResource("Animation_ces30")
}

[node name="rifle" type="Area2D"]
script = ExtResource("1_h5pw7")

[node name="Marker2D" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-25, -31)
rotation = -0.0117383

[node name="Rifle" type="Sprite2D" parent="Marker2D"]
position = Vector2(58.1369, -11.3184)
scale = Vector2(0.22852, 0.22852)
texture = ExtResource("2_qa0hb")

[node name="Arm" type="Sprite2D" parent="Marker2D"]
position = Vector2(20.964, 0.267609)
rotation = -1.5708
scale = Vector2(0.113167, 0.113167)
texture = ExtResource("1_syiff")

[node name="ShootingPoint" type="Marker2D" parent="Marker2D"]
unique_name_in_owner = true
position = Vector2(118.168, -13.6139)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(73.5, -42.25)
shape = SubResource("RectangleShape2D_4n2cq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_43qne")
}

[node name="Reload_timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="Reload_timer" to="." method="_on_reload_timer_timeout"]
